# auto-clippy

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
docs/: Design_Overview.md  Spell_Checking.md
migrations/2019-04-27-162527_repo/: down.sql  up.sql
src/: clippy.rs  database.rs  error.rs  main.rs  repos.rs  status.rs
