[package]
name = "auto-clippy"
version = "0.1.0"
authors = ["James Graves <james.c.graves.jr@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = "0.28.0"
git2 = "0.16.1"
ispell = "0.3.1"
rustfix = { git = "https://github.com/rust-lang-nursery/rustfix", branch = "master" }
structopt = "0.3.26"
anyhow = "1.0.68"
